# Finance--data-warehouse-project

./: .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  mcp_server.py  pyproject.toml
analytics/: metrics.py
api/: config.py  main.py
api/routes/: analytics.py  assets.py  sources.py
docs/: report.md
flows/: acme_financial.json
ingest/: base.py  csv_vendor_adapter.py  stooq_adapter.py  yfinance_adapter.py
scripts/: demo_temporal.py  generate_csv_vendor.py  seed.py  smoke.py
storage/: repository.py
tests/: test_temporal.py
